--- a/_includes/htb_sherlock.html
+++ b/_includes/htb_sherlock.html
@@ -1,7 +1,7 @@
 <table>
     <thead>
       <tr>
-        <th><img src="/img/htb/sherlock/{{ include.title }}/logo.png" height="64"></th>
+        <th><img src="/img/htb/sherlock/{{ include.title | downcase }}/logo.png" height="64"></th>
         <th><a href="https://app.hackthebox.com/sherlocks/{{ include.title }}">{{ include.title }}</a></th>
       </tr>
     </thead>
