--- a/_includes/htb_challenge.html
+++ b/_includes/htb_challenge.html
@@ -1,4 +1,4 @@
-<div class="tip" style="
+<div style="
     background-color: {{ include.background_color | default:  '#111927' }};
     border-left: 6px solid {{ include.border_color | default:  '#9fef00' }};
     color: #f2f2f2;
@@ -6,6 +6,21 @@
     display: flex;
     column-gap: 2rem;
     margin: 2em 2em 2em 2em;">
-  <img src="/img/htb/logo-htb.svg" />
-  <p class="tip-content">{{ include.content }}</p>
+  <div>
+    <img style="
+    position: relative;
+    top: 50%;
+    display: block;
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%)" src="/img/htb/logo-htb.svg" />
+  </div>
+  <div>
+  <p style="
+  position: relative;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%)">{{ include.content }}</p>
+  </div>
 </div>
